tests/lean/prvCtor.lean.expected.out
a : Nat

prvCtor.lean:25:23-25:61: error: invalid {...} notation, constructor for `Lean.Environment` is marked as private
prvCtor.lean:23:0-25:61: error: Cannot evaluate expression that depends on the `sorry` axiom.
Use `#eval!` to evaluate nevertheless (which may cause lean to crash).
prvCtor.lean:27:7-27:8: error: unknown identifier 'a'
prvCtor.lean:29:25-29:27: error: overloaded, errors 
  failed to synthesize
    EmptyCollection (Name "hello")
  use `set_option diagnostics true` to get diagnostic information
  
  invalid {...} notation, constructor for `Name` is marked as private
prvCtor.lean:31:25-31:34: error: invalid ⟨...⟩ notation, constructor for `Name` is marked as private
prvCtor.lean:33:25-33:40: error: unknown constant 'Name.mk'
